# deepsearch-code

./: .gitignore  MODELS.md  Makefile  README.md  benchmark.sh  conversation.json  main.py  pyproject.toml  search.py  spec.md  test-input.txt  tictactoe.py
deepsearch_code/: __main__.py  click.py  constants.py  core.py  db.py  download.py  github_client.py  indexer.py  logging.py  materialize.py  openrouter.py  oracles.py  repo.py  search_tools.py  settings.py  shell.py  utils.py
